# purepool

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
code/: main.cpp
code/Inc/: app.h  camera.h  framebuffer.h  irenderable.h  lighting_system.h  mesh.h  model.h  pbr_material.h  renderer.h  scene_object.h  shader.h  shadow_system.h  skybox.h  texture2d.h  utils.h  water_surface.h
code/Shaders/: brdf.frag  cubemap.vert  equirectangular_to_cubemap.frag  irradiance_convolution.frag  mesh_pbr.frag  mesh_pbr.vert  prefilter.frag  shadow_depth.frag  shadow_depth.vert  skybox.frag  skybox.vert  water.frag  water.vert
code/Src/: app.cpp  camera.cpp  framebuffer.cpp  lighting_system.cpp  mesh.cpp  model.cpp  renderer.cpp  scene_object.cpp  shader.cpp  shadow_system.cpp  skybox.cpp  texture2d.cpp  utils.cpp  water_surface.cpp
doc/: technical-details.md
